adds open graph image

--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
 	<meta name="author" content="Stuart Robson">
 	<meta name="description" content="it's Sass not SASS">
 
+	<!-- Open Graph / Social Media Preview -->
+	<meta property="og:title" content="Sass not SASS | from Stu Robson" />
+	<meta property="og:description" content="it's Sass not SASS" />
+	<meta property="og:image" content="OG-Sass-not-Sass.jpg" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://sassnotsass.com/" />
+
+	<!-- Twitter Card -->
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:title" content="Sass not SASS | from Stu Robson" />
+	<meta name="twitter:description" content="it's Sass not SASS" />
+	<meta name="twitter:image" content="OG-Sass-not-Sass.jpg" />
+
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
